2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strescape.

2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* configure.ac:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strlcpy.

2006-10-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* TODO:
	* src/gstr.c:
	* src/glib.h: implemented g_strdelimit.

2006-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/spawn.c: add search path flag when running ls.
	* src/gspawn.c: g_spawn_command_line_sync searches the program in the
	PATH if it's not an absolute path.

2006-10-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/string-util.c:
	* src/glib.h: implement g_ascii_xdigit_value and tests.

2006-10-06  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c (g_ascii_strdown): Implement.

	* str/glib.c (g_log_set_handler): empty.
	(g_printerr): empty.
	(GMemVTable): define, empty, ignored.

	* src/gunicode.c (g_convert): Add bytes_read, bytes_written
	support;   Small fixes to avoid valgrind errors. 
	
	(g_utf8_validate): Add, based on the libxml code.

	gstr.c: implement g_strdown. 

2006-10-05  Miguel de Icaza  <miguel@novell.com>

	* src/gunicode.c: Some work in progress to implement g_convert
	(which is needed by g_locale_to_utf8).    

2006-09-18  Miguel de Icaza  <miguel@novell.com>

	* test/string-util.c (test_filename_from_uri): tests for new
	methods.

	* src/gstr.c (g_filename_to_uri, g_filename_from_uri): implement. 

2006-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* src/gutf8.c, test/utf8.c : EOL fix.

2006-09-04  Miguel de Icaza  <miguel@novell.com>

	* src/gmarkup.c: The leak fixing commit.
	
	* src/gmarkup.c (g_markup_parse_context_end_parse): Add missing
	method. 
	(g_markup_parse_context_free): Implement. 
	(parse_attributes): Store the value, not the attribute name
	twice. 
	Properly check the /> section.