@@ -1,6 +1,9 @@
 #ifndef __GLIB_H
 #define __GLIB_H
 
+/* Define to detect that we are being built with eglib */
+#define __EGLIB_X11 1
+
 #include <stdarg.h>
 #include <stdlib.h>
 #include <string.h>
@@ -116,6 +119,9 @@ typedef gboolean (*GHRFunc)        (gpointer key, gpointer value, gpointer user_
 typedef void     (*GDestroyNotify) (gpointer data);
 typedef guint    (*GHashFunc)      (gconstpointer key);
 typedef gboolean (*GEqualFunc)     (gconstpointer a, gconstpointer b);
+
+typedef void    (*GMFree)  (void *ptr);
+typedef void   *(*GMAlloc) (size_t size);
 
 GHashTable     *g_hash_table_new             (GHashFunc hash_func, GEqualFunc key_equal_func);
 GHashTable     *g_hash_table_new_full        (GHashFunc hash_func, GEqualFunc key_equal_func,
@@ -687,6 +693,17 @@ gchar    *g_convert            (const gchar *str, gssize len,
 				const gchar *to_codeset, const gchar *from_codeset,
 				gsize *bytes_read, gsize *bytes_written, GError **error);
 gboolean  g_utf8_validate      (const gchar *str, gssize max_len, const gchar **end);
+
+/*
+ * Eglib-only routines:
+ *
+ * These are extensions, not found on regular glib.
+ */
+GHashTable     *g_hash_table_new_alloc       (GHashFunc hash_func, GEqualFunc key_equal_func,
+					      GMAlloc allocfn, GMFree freefn);
+GHashTable     *g_hash_table_new_full_alloc  (GHashFunc hash_func, GEqualFunc key_equal_func,
+					      GDestroyNotify key_destroy_func, GDestroyNotify value_destroy_func,
+					      GMAlloc allocfn, GMFree freefn);
 
 #endif
 
